fixed issue with overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+
 @layer base {
   .font-outline-2 {
     -webkit-text-stroke: 0.2px black;
@@ -20,6 +21,8 @@
 
 html,
 body {
+  height: 100%;
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -28,6 +31,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+section, footer {
+  overflow: scroll;
 }
 
 * {
